# canvas-nft-generator

./: .gitignore  Cargo.toml  Makefile  README.md  samconfig.toml  template.yml
api/: Cargo.toml
api/src/: graph.rs  main.rs
api/src/graph/: directive.rs  errors.rs  mutation.rs  pagination.rs  query.rs  types.rs
api/src/graph/dataloader/: contract.rs
api/src/graph/mutation/: contract.rs
api/src/graph/query/: contract.rs  token.rs  wallet.rs
api/src/graph/types/: contract.rs  token.rs  wallet.rs
app/: Cargo.toml  build.rs
app/proto/: api.proto
app/src/: aws.rs  ddb.rs  di.rs  domain.rs  errors.rs  ethereum.rs  internal_api.rs  ipfs.rs  lib.rs  sync.rs
app/src/application/: nft.rs
app/src/aws/: lambda.rs  ses.rs  sns.rs  ssm.rs
app/src/ddb/: contract.rs  token.rs
app/src/domain/: contract.rs  token.rs  wallet.rs
app/src/ethereum/: canvas.rs
app/src/internal_api/: api.rs
app/src/open_sea/: metadata.rs
batch/: Cargo.toml
batch/src/: main.rs
cfn/: database.yml  sns.yml
ethereum/: .env.default  Makefile  README.md  hardhat.config.ts  package-lock.json  package.json
ethereum/contracts/: Canvas.sol
ethereum/scripts/: deploy.ts
ethereum/test/: Canvas.ts
subscriber/: Cargo.toml
subscriber/src/: main.rs
