[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
actix-web = "4.3.1"
async-graphql = "5.0.10"
async-graphql-actix-web = "5.0.10"
async-graphql-value = "5.0.10"
lambda-web = { version = "0.2.1", features = ["actix4"] }
async-trait = "0.1.71"
http = "0.2.9"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
