[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
aws-config = "0.55.3"
aws-sdk-ssm = "0.28.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
derive-new = "0.5.9"
derive_more = "0.99.17"
dotenv-parser = "0.1.3"