[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
aws-config = "0.55.3"
aws-sdk-ssm = "0.28.0"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-sns = "0.28.0"
aws-sdk-lambda = "0.28.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
derive-new = "0.5.9"
derive_more = "0.99.17"
dotenv-parser = "0.1.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
strum = "0.25.0"
strum_macros = "0.25.1"
ethers = { version = "2.0.8", features = ["legacy"] }
ethers-signers = "2.0.8"