[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
aws-config = "0.55.3"
aws-sdk-ssm = "0.28.0"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-sns = "0.28.0"
aws-sdk-lambda = "0.28.0"
aws-sdk-sesv2 = "0.28.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
derive-new = "0.5.9"
derive_more = "0.99.17"
dotenv-parser = "0.1.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
strum = "0.25.0"
strum_macros = "0.25.1"
ethers = { version = "2.0.8", features = ["legacy"] }
ethers-signers = "2.0.8"
base64 = "0.21.2"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json", "multipart"] }
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.27", default-features = false, features = ["client", "http1", "http2", "stream"] }
hyper-rustls = "0.22.1"
bytes = "1.4.0"
rustc-hex = "2.1.0"

tonic = { version = "0.4", features = ["prost"] }
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }