[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subscriber"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
tokio = { version = "1.29.1", features = ["full"] }
lambda_runtime = "0.8.1"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"